# demo-repository

./: .env.example  .gitignore  API_TESTING_RESULTS.md  CLAUDE.md  Dockerfile  MISTRAL_API_GUIDE.md  OPENAI_API_TEST_RESULTS.md  README.md  analysis_dashboard.html  analysis_report.json  analyze_openai.py  analyze_openhands.py  analyze_repo.py  api_server.py  compare_analysis.py  initialize_rag.py  install_openhands.sh  mistral_analysis_report.json  mistral_api_integration.py  mistral_integration.py  mistral_real_analysis_report.json  openai_config.py  openhands_config.py  pyproject.toml  rag_system.py  requirements.txt  run_mistral_analysis.py  serve_dashboard.py  test_api.py  test_mistral_api.py  test_openai_api.py  test_openai_comprehensive.py  test_openai_integration.py  test_openhands_integration.py  test_real_mistral.py
.github/: README.md  dependabot.yml
.github/workflows/: auto-assign.yml  ci.yml  dependabot-auto-merge.yml
