[tool.poetry]
name = "demo-repository"
version = "0.1.0"
description = "A demo repository with Mistral AI analysis integration"
authors = ["OpenHands <openhands@all-hands.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.1"
mistralai = "^1.0.0"
requests = "^2.31.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyze = "analyze_repo:main"
serve-dashboard = "serve_dashboard:main"